--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
-  "devDependencies": {
-    "typescript": "~5.9.3",
-    "vite": "^7.3.1"
-  },
   "dependencies": {
     "phaser": "^3.80.1",
-    "phaser3-rex-plugins": "^1.80.18"
+    "phaser3-rex-plugins": "^1.80.18",
+    "vite": "^7.3.1"
+  },
+  "devDependencies": {
+    "typescript": "~5.9.3"
   }
 }
